# Classical-Machine-Learning

./: main.py  pyproject.toml
classical-ml/: README.md  pyproject.toml
classical-ml/conf/base/: logging.yml
classical-ml/docs/source/: conf.py  index.rst
classical-ml/notebooks/: 1_UMAP_DimensionalityReduction.ipynb  2_UMAP_Usage_ML_Pipeline.ipynb  3_UMAP_EmbedDocuments.ipynb  4_UMAP_Clustering.ipynb  5_BiasVariance_Tradeoff_Model_Complexity.ipynb
classical-ml/src/: setup.py
classical-ml/src/classical_ml/: __init__.py  __main__.py  settings.py
classical-ml/src/tests/: test_run.py
