[project]
name = "classical-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "kedro>=0.19.11",
    "matplotlib>=3.9.4",
    "mlxtend>=0.23.4",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "umap-learn[plot]>=0.5.7",
]
